New Project Added

--- a/projects.html
+++ b/projects.html
@@ -42,6 +42,47 @@
     </header>
 
     <main>
+        <h2 class="text-white h2-lower" id="cssms">Computer Student Simple Management System</h2>
+        <br>
+        <div class="info-wrapper">
+            <ul class="text-white info-list">
+                <li><span class="bold bg-blue">Name:</span><br> Computer Student Simple Management System</li>
+                <li class="text-justify">
+                    <span class="bold bg-blue">Description:</span><br>
+                    - This is a windows app developed using the C# programming language. <br>
+                    -
+                </li>
+                <li><span class="bold bg-blue">Year:</span><br> 2023</li>
+                <li><span class="bold bg-blue">Repository:</span><br> <a class="improved-link-white"
+                        href="https://github.com/Erwin-Hadjirul/ComputerStudentSimpleManagementSystem">https://github.com/Erwin-Hadjirul/ComputerStudentSimpleManagementSystem</a>
+                </li>
+            </ul>
+        </div>
+        <br>
+        <div class="box-wrapper-grid snaps-inline">
+            <div class="box-item-grid"><a href="raw-data/icons/cssms 512x512.png" target="_blank"><img
+                        src="raw-data/icons/cssms 512x512.png" alt="App Icon"></a></div>
+            <div class="box-item-grid"><a href="raw-data/img/my-proj/comp-student-sms/1.dashboard.png"
+                    target="_blank"><img src="raw-data/img/my-proj/comp-student-sms/1.dashboard.png"
+                        alt="Screenshots"></a></div>
+            <div class="box-item-grid"><a href="raw-data/img/my-proj/comp-student-sms/2.courses.png"
+                    target="_blank"><img src="raw-data/img/my-proj/comp-student-sms/2.courses.png"
+                        alt="Screenshots"></a></div>
+            <div class="box-item-grid"><a href="raw-data/img/my-proj/comp-student-sms/3.add.png" target="_blank"><img
+                        src="raw-data/img/my-proj/comp-student-sms/3.add.png" alt="Screenshots"></a></div>
+            <div class="box-item-grid"><a href="raw-data/img/my-proj/comp-student-sms/4.lists.png" target="_blank"><img
+                        src="raw-data/img/my-proj/comp-student-sms/4.lists.png" alt="Screenshots"></a></div>
+            <div class="box-item-grid"><a href="raw-data/img/my-proj/comp-student-sms/5.details.png"
+                    target="_blank"><img src="raw-data/img/my-proj/comp-student-sms/5.details.png"
+                        alt="Screenshots"></a></div>
+            <div class="box-item-grid"><a href="raw-data/img/my-proj/comp-student-sms/6.search.png" target="_blank"><img
+                        src="raw-data/img/my-proj/comp-student-sms/6.search.png" alt="Screenshots"></a></div>
+            <div class="box-item-grid"><a href="raw-data/img/my-proj/comp-student-sms/7.bothlists.png"
+                    target="_blank"><img src="raw-data/img/my-proj/comp-student-sms/7.bothlists.png"
+                        alt="Screenshots"></a></div>
+        </div>
+        <div class="h2-lower"></div>
+
         <h2 class="text-white h2-lower" id="techwannabe-pet-collections">TechWannabe Pet Collections</h2>
         <br>
         <div class="info-wrapper">
@@ -200,57 +241,6 @@
                         src="raw-data/img/my-proj/my-cli-game/7.png" alt="Screenshots"></a></div>
             <div class="box-item-grid"><a href="raw-data/img/my-proj/my-cli-game/8.png" target="_blank"><img
                         src="raw-data/img/my-proj/my-cli-game/8.png" alt="Screenshots"></a></div>
-        </div>
-        <div class="h2-lower"></div>
-
-        <h2 class="text-white h2-lower" id="student-management-cli">Student Record Management Console App</h2>
-        <br>
-        <div class="info-wrapper">
-            <ul class="text-white info-list">
-                <li><span class="bold bg-blue">Name:</span><br> Student Record Management (CLI-based System)</li>
-                <li class="text-justify">
-                    <span class="bold bg-blue">Description:</span><br>
-                    - This is a console app or CLI-based system (command-line interface-based system) developed using
-                    the C# programming language. <br>
-                    - The app starts directly with its logo, name, and menu stacked together, while the system prompts
-                    the user to choose from the menu. If the user wants to add a student record to the system, he needs
-                    to choose number 1. Otherwise, if the user wants to view all the records recorded in the system, he
-                    needs to choose number 2. Otherwise, if the user only wants to know if a certain record is recorded
-                    in the system, he needs to choose number 3. And the last number is for the exit or stop of the
-                    system. <br>
-                    In the Add Section, the user first needs to choose the specific student course he wants to record or
-                    return to the menu. Then the user can enter the student record information. After clicking enter,
-                    the record is being recorded. The user can record student records again. <br>
-                    In the View Section, the user can view all the records recorded in the specific student course,
-                    which should be specified by the user upon entering the section. Then, the user can return to the
-                    menu.
-                    <br>
-                    In the Search Section, the user can enter the name of a student he wants to ensure that it is
-                    recorded in the system. If the student's name exists, the system will echo "Record Found!";
-                    otherwise, "Record Not Found!"
-                </li>
-                <li><span class="bold bg-blue">Year:</span><br> 2022</li>
-                <li><span class="bold bg-blue">Repository:</span><br> <a class="improved-link-white"
-                        href="https://github.com/Erwin-Hadjirul/StudentRecord-Management-Cli-basedSystem">https://github.com/Erwin-Hadjirul/StudentRecord-Management-Cli-basedSystem</a>
-                </li>
-            </ul>
-        </div>
-        <br>
-        <div class="box-wrapper-grid snaps-inline">
-            <div class="box-item-grid"><a href="raw-data/icons/android-chrome-512x512-student.png" target="_blank"><img
-                        src="raw-data/icons/android-chrome-512x512-student.png" alt="App Icon"></a></div>
-            <div class="box-item-grid"><a href="raw-data/img/my-proj/student-management-cli/1.png" target="_blank"><img
-                        src="raw-data/img/my-proj/student-management-cli/1.png" alt="Screenshots"></a></div>
-            <div class="box-item-grid"><a href="raw-data/img/my-proj/student-management-cli/2.png" target="_blank"><img
-                        src="raw-data/img/my-proj/student-management-cli/2.png" alt="Screenshots"></a></div>
-            <div class="box-item-grid"><a href="raw-data/img/my-proj/student-management-cli/3.png" target="_blank"><img
-                        src="raw-data/img/my-proj/student-management-cli/3.png" alt="Screenshots"></a></div>
-            <div class="box-item-grid"><a href="raw-data/img/my-proj/student-management-cli/4.png" target="_blank"><img
-                        src="raw-data/img/my-proj/student-management-cli/4.png" alt="Screenshots"></a></div>
-            <div class="box-item-grid"><a href="raw-data/img/my-proj/student-management-cli/5.png" target="_blank"><img
-                        src="raw-data/img/my-proj/student-management-cli/5.png" alt="Screenshots"></a></div>
-            <div class="box-item-grid"><a href="raw-data/img/my-proj/student-management-cli/6.png" target="_blank"><img
-                        src="raw-data/img/my-proj/student-management-cli/6.png" alt="Screenshots"></a></div>
         </div>
         <div class="h2-lower"></div>
 
