--- a/services.html
+++ b/services.html
@@ -135,8 +135,7 @@
                 <div class="text-justice">
                     <p>Sample Project:</p>
                     <br>
-                    <p class="text-red">No Available</p>
-                    <!-- - <a class="improved-link" href="#"></a> -->
+                    - <a class="improved-link" href="projects.html#cssms">Computer Student Simple Management System</a>
                 </div>
                 <br>
                 <h3 class="text-white left ml-25 bold">Console Application Development</h3>
@@ -154,9 +153,7 @@
                 <div class="text-justice">
                     <p>Sample Project:</p>
                     <br>
-                    - <a class="improved-link" href="projects.html#guess-game">Guess Game CLI</a><br>
-                    - <a class="improved-link" href="projects.html#student-management-cli">Student Record Management
-                        CLI</a>
+                    - <a class="improved-link" href="projects.html#guess-game">Guess Game CLI</a>
                 </div>
                 <br>
                 <h2 class="text-white left ml-20 bold">Additional Information:</h3>
