--- a/about-me.html
+++ b/about-me.html
@@ -76,8 +76,8 @@
             </div>
         </div>
         <p class="quote">
-            Computer Science Degree Holder who is passionate about programming is looking to transition into the
-            real-world programming profession.
+            A computer science degree holder, passionate about programming, and looking to expand his programming
+            experience.
         </p>
 
         <!-- Skills -->
