--- a/about-me.html
+++ b/about-me.html
@@ -76,8 +76,8 @@
             </div>
         </div>
         <p class="quote">
-            A computer science degree holder, passionate about programming, and looking to expand my programming
-            experience and knowledge.
+            Computer science degree holder, passionate about programming, and looking to expand programming experience
+            and knowledge
         </p>
 
         <!-- Skills -->
