--- a/about-me.html
+++ b/about-me.html
@@ -200,6 +200,20 @@
         <!-- Personal Projects -->
         <h2 class="text-white">Personal Projects</h2>
         <section class="cards">
+            <a class="card" href="projects.html#cssms">
+                <div class="card-image"
+                    style="background-image: url(raw-data/icons/cssms\ 512x512.png); background-size: contain;">
+                </div>
+                <div class="card-content">
+                    <div class="card-title">Computer Student Simple Management System</div>
+                    <div class="card-snippet">
+                        <p><span class="bold">Short Description:</span>
+                            This is a windows app developed using the C# programming language...
+                        </p>
+                    </div>
+                    <div class="card-readmore">2023</div>
+                </div>
+            </a>
             <a class="card" href="projects.html#techwannabe-pet-collections">
                 <div class="card-image"
                     style="background-image: url(raw-data/img/my-proj/techwannabe-pet-collections/eagle.jpg); background-size: contain;">
