Updated Computer Student SMS Project

--- a/projects.html
+++ b/projects.html
@@ -50,7 +50,11 @@
                 <li class="text-justify">
                     <span class="bold bg-blue">Description:</span><br>
                     - This is a windows app developed using the C# programming language. <br>
-                    -
+                    - First, you'll choose from the main menu what you need to do in this system. Just click what you
+                    choose. You can ADD, VIEW, SEARCH, and EXIT.<br>
+                    - In this system, you can input the information of a student.<br>
+                    - You can view the list of students recorded in this system and their details.<br>
+                    - You can search for the name of the student you want to know if he/she is recorded in the system.
                 </li>
                 <li><span class="bold bg-blue">Year:</span><br> 2023</li>
                 <li><span class="bold bg-blue">Repository:</span><br> <a class="improved-link-white"
