--- a/about-me.html
+++ b/about-me.html
@@ -208,7 +208,8 @@
                     <div class="card-title">Computer Student Simple Management System</div>
                     <div class="card-snippet">
                         <p><span class="bold">Short Description:</span>
-                            This is a windows app developed using the C# programming language...
+                            First, you'll choose from the main menu what you need to do in this system. Just click what
+                            you choose...
                         </p>
                     </div>
                     <div class="card-readmore">2023</div>
