--- a/about-me.html
+++ b/about-me.html
@@ -118,7 +118,7 @@
                     <div class="card-snippet">
                         <p><span class="bold">Role:</span> Software Support/Programmer</p>
                         <p><span class="bold">Short Description:</span>
-                            Supporting and deploying software systems also helping senior developers develop systems.
+                            Supporting and deploying software systems also helps senior developers develop systems.
                         </p>
                     </div>
                     <div class="card-readmore">
