--- a/exp-pages/1yr-leepe.html
+++ b/exp-pages/1yr-leepe.html
@@ -77,7 +77,7 @@
                     something was wrong or unnecessary. I fixed their system and made it pure Leepe. Because the system
                     was just a copy of the MFT Company ERP system. Actually, I don't know anything about it. 🤷‍♂️
                 </p>
-                <h6>September, 2023</h6>
+                <h6>September &ndash; November, 2023</h6>
             </div>
 
             <div class="exp-box centerer">
@@ -90,7 +90,7 @@
                     just copied the whole system, changed some important details, and boom! There is now an ERP system
                     for 40Field Solutions Company. 😁
                 </p>
-                <h6>October, 2023</h6>
+                <h6>October &ndash; November, 2023</h6>
             </div>
         </div>
     </main>
