--- a/projects.html
+++ b/projects.html
@@ -109,9 +109,8 @@
         </div>
         <br>
         <div class="box-wrapper-grid snaps-inline">
-            <div class="box-item-grid"><a href="raw-data/img/my-proj/techwannabe-pet-collections/eagle.jpg"
-                    target="_blank"><img src="raw-data/img/my-proj/techwannabe-pet-collections/eagle.jpg"
-                        alt="App Icon"></a></div>
+            <div class="box-item-grid"><a href="raw-data/icons/Logo.png" target="_blank"><img
+                        src="raw-data/icons/Logo.png" alt="App Icon"></a></div>
             <div class="box-item-grid"><a href="raw-data/img/my-proj/techwannabe-pet-collections/1 - home.png"
                     target="_blank"><img src="raw-data/img/my-proj/techwannabe-pet-collections/1 - home.png"
                         alt="Screenshots"></a></div>
