--- a/about-me.html
+++ b/about-me.html
@@ -83,6 +83,19 @@
         <!-- Skills -->
         <h2 class="text-white">Skills</h2>
         <section class="cards">
+            <a class="card" href="services.html#mobile-app-developer">
+                <div class="card-image"
+                    style="background: url(raw-data/img/dotnet_maui.png); background-size: contain;">
+                </div>
+                <div class="card-content">
+                    <div class="card-title">Mobile App Development</div>
+                    <div class="card-snippet">
+                        <p><span class="bold">Role:</span> Mobile App Developer</p>
+                        <p><span class="bold">Technology:</span> C#, .NET MAUI, Xamarin, XML, XAML and SQL</p>
+                    </div>
+                    <div class="card-readmore">2023 &ndash; Present</div>
+                </div>
+            </a>
             <a class="card" href="services.html#web-developer">
                 <div class="card-image" style="background: url(raw-data/svg/ASP.NET.svg);"></div>
                 <div class="card-content">
@@ -110,22 +123,6 @@
         <!-- Experience Section -->
         <h2 class="text-white">Experiences</h2>
         <section class="cards">
-            <a class="card" href="exp-pages/1yr-pbts.html">
-                <div class="card-image"
-                    style="background-image: url(raw-data/img/exp/pbts.png); background-size: contain;"></div>
-                <div class="card-content">
-                    <div class="card-title">PBTS (Pro Board Technology Services) &mdash; Cavite</div>
-                    <div class="card-snippet">
-                        <p><span class="bold">Role:</span> Software Support/Programmer</p>
-                        <p><span class="bold">Short Description:</span>
-                            Supporting and deploying software systems also helps senior developers develop systems.
-                        </p>
-                    </div>
-                    <div class="card-readmore">
-                        <p>January - June, 2023</p>
-                    </div>
-                </div>
-            </a>
             <a class="card" href="exp-pages/1yr-leepe.html">
                 <div class="card-image"
                     style="background-image: url(raw-data/img/exp/leepe.png); background-size: contain;"></div>
@@ -139,6 +136,22 @@
                     </div>
                     <div class="card-readmore">
                         <p>January - December, 2023</p>
+                    </div>
+                </div>
+            </a>
+            <a class="card" href="exp-pages/1yr-pbts.html">
+                <div class="card-image"
+                    style="background-image: url(raw-data/img/exp/pbts.png); background-size: contain;"></div>
+                <div class="card-content">
+                    <div class="card-title">PBTS (Pro Board Technology Services) &mdash; Cavite</div>
+                    <div class="card-snippet">
+                        <p><span class="bold">Role:</span> Software Support/Programmer</p>
+                        <p><span class="bold">Short Description:</span>
+                            Supporting and deploying software systems also helps senior developers develop systems.
+                        </p>
+                    </div>
+                    <div class="card-readmore">
+                        <p>January - June, 2023</p>
                     </div>
                 </div>
             </a>
@@ -318,8 +331,8 @@
                 </h3>
                 <p>Brgy. Takut-takut</p>
                 <p>Jolo, Sulu, Philippines</p>
-                <p class="email"><a href="mailto:erwinhadjirul15@gmail.com">erwinhadjirul15@gmail.com</a></p>
-                <h4>+63981-618-1943</h4>
+                <p class="email"><a href="mailto:erwinhadjirul16@gmail.com">erwinhadjirul16@gmail.com</a></p>
+                <h4>+63975-413-2376</h4>
             </div>
             <div class="col">
                 <h3>Social Medias <div class="underline"><span></span></div>
@@ -335,7 +348,7 @@
             </div>
         </div>
         <hr class="copyright-line">
-        <p class="text-center">&copy; 2023 - Erwin Hadjirul - Personal Portfolio</p>
+        <p class="text-center">&copy; 2024 - Erwin Hadjirul - Personal Portfolio</p>
     </footer>
 
 </body>
