--- a/services.html
+++ b/services.html
@@ -43,6 +43,42 @@
     </header>
 
     <main>
+        <!-- Mobile App Development -->
+        <h2 class="text-white h2-lower" id="mobile-app-developer">Mobile App Development</h2>
+        <section class="webdev">
+            <div class="upper-img" style="background: url(raw-data/img/dotnet_maui.png); background-size: contain;">
+            </div>
+            <div class="lower-content">
+                <h3 class="text-white text-center bold">Mobile App Developer</h3>
+                <h3 class="text-white text-center"><span class="bold">Technology:</span> C#, .NET MAUI, Xamarin, XML,
+                    XAML and SQL</h3>
+                <div class="boundary mr-25">2023 &ndash; Present</div>
+            </div>
+            <div class="lower-content">
+                <h2 class="text-white left ml-20 bold">I offer:</h2>
+                <br>
+                <h3 class="text-white left ml-25 bold">Mobile App Development</h3>
+                <p class="text-white text-justice">
+                    - The process of developing application for mobile. <br><br>
+                    - Platforms I offer: Cross-platform (because .NET offers a single codebase that can run on different
+                    platforms)<br><br>
+                    - Technologies I use: C#, .NET MAUI, Xamarin, XML, XAML and SQL
+                </p>
+                <div class="text-justice">
+                    <p>Sample Project:</p>
+                    <br>
+                    - <a class="improved-link" href="projects.html#numsys-c">NumSys-C Mobile Applicatione</a>
+                </div>
+                <br>
+                <h2 class="text-white left ml-20 bold">Additional Information:</h2>
+                <br>
+                <h3 class="text-white left ml-25 bold">Mobile App</h3>
+                <p class="text-white text-justice">
+                    - Applications that surround our mobile app.
+                </p>
+            </div>
+        </section>
+
         <!-- Web Development -->
         <h2 class="text-white h2-lower" id="web-developer">Web Development</h2>
         <section class="webdev">
@@ -188,8 +224,8 @@
                 </h3>
                 <p>Brgy. Takut-takut</p>
                 <p>Jolo, Sulu, Philippines</p>
-                <p class="email"><a href="mailto:erwinhadjirul15@gmail.com">erwinhadjirul15@gmail.com</a></p>
-                <h4>+63981-618-1943</h4>
+                <p class="email"><a href="mailto:erwinhadjirul16@gmail.com">erwinhadjirul16@gmail.com</a></p>
+                <h4>+63975-413-2376</h4>
             </div>
             <div class="col">
                 <h3>Social Medias <div class="underline"><span></span></div>
@@ -205,7 +241,7 @@
             </div>
         </div>
         <hr class="copyright-line">
-        <p class="text-center">&copy; 2023 - Erwin Hadjirul - Personal Portfolio</p>
+        <p class="text-center">&copy; 2024 - Erwin Hadjirul - Personal Portfolio</p>
     </footer>
 
 </body>
